--- a/exercício.html
+++ b/exercício.html
@@ -4,13 +4,12 @@
     <style>
         h1 {color : green}
         thead {color: rgb(232, 8, 138)}
-        tbody {color : blue}
 
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brasileirão série A</title>
 </head>
 <body>
     <header>
@@ -37,14 +36,14 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td rowspan = '6'> Libertadores 
+                    <td style="color: rgb(11, 202, 11)"rowspan = '6'> Libertadores 
                     </td>
                     
                     <td> 1 </td>
                     <td> 
                         <img src="img/palmeiras.jpg" width= "23" height="23" alt="time"/>
                     </td>
-                    <td> Palmeiras </td>
+                    <td style="color: rgb(11, 202, 11)"> Palmeiras </td>
                     <td> 57 </td>
                     <td> 27 </td>
                     <td> 16 </td>
@@ -55,7 +54,7 @@
                   <tr>
                     <td> 2 </td>
                     <td> <img src="img/fluminense.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Fluminense </td>
+                    <td style="color: rgb(11, 202, 11)"> Fluminense </td>
                     <td> 48 </td>
                     <td> 27 </td>
                     <td> 14 </td>
@@ -65,7 +64,7 @@
                   <tr>
                     <td> 3 </td>
                     <td> <img src="img/internacional.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Internacional </td>
+                    <td style="color: rgb(11, 202, 11)"> Internacional </td>
                     <td> 46 </td>
                     <td> 26 </td>
                     <td> 12 </td>
@@ -75,7 +74,7 @@
                   <tr>
                     <td> 4 </td>
                     <td> <img src="img/flamengo.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Flamengo </td>
+                    <td style="color: rgb(11, 202, 11)"> Flamengo </td>
                     <td> 45 </td>
                     <td> 27 </td>
                     <td> 13 </td>
@@ -85,7 +84,7 @@
                   <tr>
                     <td> 5 </td>
                     <td> <img src="img/corinthians.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Corinthias </td>
+                    <td style="color: rgb(11, 202, 11)"> Corinthias </td>
                     <td> 44 </td>
                     <td> 27 </td>
                     <td> 12 </td>
@@ -95,7 +94,7 @@
                   <tr>
                     <td> 6 </td>
                     <td> <img src="img/athletico-pr.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Athletico-PR </td>
+                    <td style="color: rgb(11, 202, 11)"> Athletico-PR </td>
                     <td> 44 </td>
                     <td> 27 </td>
                     <td> 12 </td>
@@ -103,10 +102,10 @@
                     <td> 54 </td>               
                   </tr>
                   <tr>
-                    <td rowspan = '6'> Copa sul-americana &ensp;&ensp;&ensp;</td>
+                    <td style="color:orange" rowspan = '6'> Copa sul-americana &ensp;&ensp;&ensp;</td>
                     <td> 7 </td>
                     <td> <img src="img/atletico-mg.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Atlético-MG</td>
+                    <td style="color:orange"> Atlético-MG</td>
                     <td> 40 </td>
                     <td>  27 </td>
                     <td> 12 </td>
@@ -116,7 +115,7 @@
                   <tr>
                     <td> 8 </td>
                     <td> <img src="img/america-mg.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> América - Atlético-MG</td>
+                    <td style="color:orange"> América - Atlético-MG</td>
                     <td> 39 </td>
                     <td>  27 </td>
                     <td> 11 </td>
@@ -126,7 +125,7 @@
                   <tr>
                     <td> 9 </td>
                     <td> <img src="img/goias.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Goiás </td>
+                    <td style="color:orange"> Goiás </td>
                     <td> 37 </td>
                     <td>  27 </td>
                     <td> 9 </td>
@@ -136,7 +135,7 @@
                   <tr>
                     <td> 10 </td>
                     <td> <img src="img/botafogo.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Botafogo </td>
+                    <td style="color:orange"> Botafogo </td>
                     <td> 37 </td>
                     <td>  27 </td>
                     <td> 9 </td>
@@ -146,7 +145,7 @@
                   <tr>
                     <td> 11 </td>
                     <td> <img src="img/santos.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Santos </td>
+                    <td style="color:orange"> Santos </td>
                     <td> 34 </td>
                     <td>  27 </td>
                     <td> 8 </td>
@@ -156,7 +155,7 @@
                   <tr>
                     <td> 12 </td>
                     <td> <img src="img/bragantino.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Red bull bragantino </td>
+                    <td style="color:orange"> Red bull bragantino </td>
                     <td> 34 </td>
                     <td>  27 </td>
                     <td> 8 </td>
@@ -167,7 +166,7 @@
                     <td rowspan = '4'> </td>
                     <td> 13 </td>
                     <td> <img src="img/sao-paulo.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> São Paulo </td>
+                    <td style="color:rgb(73, 2, 81)"> São Paulo </td>
                     <td> 34 </td>
                     <td>  27 </td>
                     <td> 7 </td>
@@ -177,7 +176,7 @@
                   <tr>
                     <td> 14 </td>
                     <td> <img src="img/fortaleza.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Fortaleza </td>
+                    <td style="color:rgb(73, 2, 81)"> Fortaleza </td>
                     <td> 31 </td>
                     <td>  27 </td>
                     <td> 8 </td>
@@ -187,7 +186,7 @@
                   <tr>
                     <td> 15 </td>
                     <td> <img src="img/ceara.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Ceará </td>
+                    <td style="color:rgb(73, 2, 81)"> Ceará </td>
                     <td> 31 </td>
                     <td>  27 </td>
                     <td> 6 </td>
@@ -197,7 +196,7 @@
                   <tr>
                     <td> 16 </td>
                     <td> <img src="img/coritiba.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Coritiba </td>
+                    <td style="color:rgb(73, 2, 81)"> Coritiba </td>
                     <td> 28 </td>
                     <td>  27 </td>
                     <td> 8 </td>
@@ -205,10 +204,10 @@
                     <td> 35 </td>                
                   </tr>
                   <tr>
-                    <td rowspan = '4'> Rebaixamento </td>
+                    <td style="color:red"rowspan = '4'> Rebaixamento </td>
                     <td> 17 </td>
                     <td> <img src="img/avai.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Avaí </td>
+                    <td style="color: red"> Avaí </td>
                     <td> 28 </td>
                     <td>  7 </td>
                     <td> -13 </td>
@@ -218,7 +217,7 @@
                   <tr>
                     <td> 18 </td>
                     <td> <img src="img/cuiaba.jpg" width= "23" height="23" alt="time"/> </td> 
-                    <td> Cuiabá </td>
+                    <td style="color:red"> Cuiabá </td>
                     <td> 27 </td>
                     <td>  27 </td>
                     <td> 6 </td>
@@ -228,7 +227,7 @@
                   <tr>
                     <td> 19 </td>
                     <td> <img src="img/atletico-go.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Atlético- GO</td>
+                    <td style="color:red"> Atlético- GO</td>
                     <td> 22 </td>
                     <td>  26 </td>
                     <td> 5 </td>
@@ -238,7 +237,7 @@
                   <tr>
                     <td> 20 </td>
                     <td> <img src="img/juventude.jpg" width= "23" height="23" alt="time"/> </td>
-                    <td> Juventude </td>
+                    <td style="color:red"> Juventude </td>
                     <td> 19 </td>
                     <td>  27 </td>
                     <td> 3 </td>
