--- a/exercício.html
+++ b/exercício.html
@@ -10,6 +10,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brasileirão série A</title>
+    <!-- <link rel="icon" href="./img/bolafut-removebg-preview.png" -->
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="icon" href="./img/bolafut-removebg-preview.png" 
 </head>
 <body>
     <header>
@@ -35,7 +38,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <tr class="libertadores">
                     <td style="color: rgb(11, 202, 11)"rowspan = '6'> Libertadores 
                     </td>
                     
@@ -51,7 +54,7 @@
                     <td> 70 </td>    
                                
                   </tr>
-                  <tr>
+                  <tr class="libertadores">
                     <td> 2 </td>
                     <td> <img src="img/fluminense.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color: rgb(11, 202, 11)"> Fluminense </td>
@@ -61,7 +64,7 @@
                     <td> 11 </td>  
                     <td> 59 </td>              
                   </tr>
-                  <tr>
+                  <tr class="libertadores">
                     <td> 3 </td>
                     <td> <img src="img/internacional.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color: rgb(11, 202, 11)"> Internacional </td>
@@ -71,7 +74,7 @@
                     <td> 16 </td> 
                     <td> 59 </td>               
                   </tr>
-                  <tr>
+                  <tr class="libertadores">
                     <td> 4 </td>
                     <td> <img src="img/flamengo.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color: rgb(11, 202, 11)"> Flamengo </td>
@@ -81,7 +84,7 @@
                     <td> 18 </td>
                     <td> 56 </td>                
                   </tr>
-                  <tr>
+                  <tr class="libertadores">
                     <td> 5 </td>
                     <td> <img src="img/corinthians.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color: rgb(11, 202, 11)"> Corinthias </td>
@@ -91,7 +94,7 @@
                     <td> 4 </td> 
                     <td> 54 </td>               
                   </tr>
-                  <tr>
+                  <tr class="libertadores">
                     <td> 6 </td>
                     <td> <img src="img/athletico-pr.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color: rgb(11, 202, 11)"> Athletico-PR </td>
@@ -101,7 +104,7 @@
                     <td> 2 </td> 
                     <td> 54 </td>               
                   </tr>
-                  <tr>
+                  <tr class=copasulamericana>
                     <td style="color:orange" rowspan = '6'> Copa sul-americana &ensp;&ensp;&ensp;</td>
                     <td> 7 </td>
                     <td> <img src="img/atletico-mg.jpg" width= "23" height="23" alt="time"/> </td>
@@ -112,7 +115,7 @@
                     <td> 4 </td> 
                     <td> 49 </td>               
                   </tr>
-                  <tr>
+                  <tr class=copasulamericana>
                     <td> 8 </td>
                     <td> <img src="img/america-mg.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:orange"> América - Atlético-MG</td>
@@ -122,7 +125,7 @@
                     <td> -2 </td> 
                     <td> 48 </td>               
                   </tr>
-                  <tr>
+                  <tr class=copasulamericana>
                     <td> 9 </td>
                     <td> <img src="img/goias.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:orange"> Goiás </td>
@@ -132,7 +135,7 @@
                     <td> -3 </td> 
                     <td> 46 </td>           
                   </tr>
-                  <tr>
+                  <tr class=copasulamericana>
                     <td> 10 </td>
                     <td> <img src="img/botafogo.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:orange"> Botafogo </td>
@@ -142,7 +145,7 @@
                     <td> -3 </td>  
                     <td> 42 </td>              
                   </tr>
-                  <tr>
+                  <tr class=copasulamericana>
                     <td> 11 </td>
                     <td> <img src="img/santos.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:orange"> Santos </td>
@@ -152,7 +155,7 @@
                     <td> 4 </td>  
                     <td> 42 </td>              
                   </tr>
-                  <tr>
+                  <tr class=copasulamericana>
                     <td> 12 </td>
                     <td> <img src="img/bragantino.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:orange"> Red bull bragantino </td>
@@ -162,7 +165,7 @@
                     <td> 3 </td> 
                     <td> 42 </td>               
                   </tr>
-                  <tr>
+                  <tr class="semclasse">
                     <td rowspan = '4'> </td>
                     <td> 13 </td>
                     <td> <img src="img/sao-paulo.jpg" width= "23" height="23" alt="time"/> </td>
@@ -173,7 +176,7 @@
                     <td> 4 </td> 
                     <td> 42 </td>               
                   </tr>
-                  <tr>
+                  <tr class="semclasse">
                     <td> 14 </td>
                     <td> <img src="img/fortaleza.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:rgb(73, 2, 81)"> Fortaleza </td>
@@ -183,7 +186,7 @@
                     <td> -4 </td> 
                     <td> 38 </td>               
                   </tr>
-                  <tr>
+                  <tr class="semclasse">
                     <td> 15 </td>
                     <td> <img src="img/ceara.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:rgb(73, 2, 81)"> Ceará </td>
@@ -193,7 +196,7 @@
                     <td> -2 </td>
                     <td> 38 </td>                
                   </tr>
-                  <tr>
+                  <tr class="semclasse">
                     <td> 16 </td>
                     <td> <img src="img/coritiba.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:rgb(73, 2, 81)"> Coritiba </td>
@@ -203,7 +206,7 @@
                     <td> -15 </td>
                     <td> 35 </td>                
                   </tr>
-                  <tr>
+                  <tr class="rebaixamento">
                     <td style="color:red"rowspan = '4'> Rebaixamento </td>
                     <td> 17 </td>
                     <td> <img src="img/avai.jpg" width= "23" height="23" alt="time"/> </td>
@@ -214,7 +217,7 @@
                     <td> -8 </td>    
                     <td> 35 </td>            
                   </tr>
-                  <tr>
+                  <tr class="rebaixamento">
                     <td> 18 </td>
                     <td> <img src="img/cuiaba.jpg" width= "23" height="23" alt="time"/> </td> 
                     <td style="color:red"> Cuiabá </td>
@@ -224,7 +227,7 @@
                     <td> -8 </td>
                     <td> 33 </td>                
                   </tr>
-                  <tr>
+                  <tr class="rebaixamento">
                     <td> 19 </td>
                     <td> <img src="img/atletico-go.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:red"> Atlético- GO</td>
@@ -234,7 +237,7 @@
                     <td> -17 </td>
                     <td> 28 </td>                
                   </tr>
-                  <tr>
+                  <tr class="rebaixamento">
                     <td> 20 </td>
                     <td> <img src="img/juventude.jpg" width= "23" height="23" alt="time"/> </td>
                     <td style="color:red"> Juventude </td>
